tests/valid/trait/method_call_explicit_ufcs_local_inferred_pure_receiver_type_args.facet
trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T {
    value
  }
}

fn main() -> unrestricted bool {
  let x = 1;
  (<unrestricted isize as Mapper>::map<unrestricted bool> x true)
}
