tests/invalid/trait/method_call_type_args_arity.facet
trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T {
    value
  }
}

fn main() -> unrestricted bool {
  (<unrestricted isize as Mapper>::map<unrestricted bool, unrestricted isize> 0 true)
}
